# research_hub_mcp

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_CLEAN_RESTART.md  CLAUDE_DESKTOP_DEBUG.md  CLAUDE_DESKTOP_SETUP.md  COMMAND_PATTERN_IMPLEMENTATION.md  COMPLIANCE_REPORT.md  CONFIG_UPDATE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION_STATUS.md  DISTRIBUTION_SUCCESS.md  DONE.md  DOWNLOAD_LOGGING_CHANGES.md  Dockerfile  INSTALL.md  INSTALLATION_STATUS.md  OHAT_and_Agentic_Review_Papers.md  README.md  SMITHERY.md  STORIES.md  audit_report.md  build.rs  claude_desktop_config_example.json  clippy.toml  comprehensive_compliance_report.md  comprehensive_e2e_test_suite.md  config.toml  debug_demo.md  install.sh  mcp-http-wrapper.js  package.json  rust-research-mcp.dxt  rustfmt.toml  smithery.json  smithery.yaml  (+13 more)
.claude/: settings.local.json
.config/: nextest.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  provider_request.yml
.github/workflows/: ci.yml
benches/: download_bench.rs  search_bench.rs  server_bench.rs
docs/: ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  HOMEBREW.md  LAUNCHAGENT.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/providers/: openalex_setup.md
examples/: README.md  hexagonal_architecture_demo.rs
extension/: README.md  manifest.json  rust-research-mcp.dxt
homebrew/: README.md  release.toml  rust-research-mcp.rb  rust-sci-hub-mcp.rb  update_formula.sh
launchd/: com.rust-sci-hub-mcp.plist
scripts/: install.sh  run_all_tests.sh  service.sh  test_providers.sh  uninstall.sh
src/: error.rs  lib.rs  main.rs
src/adapters/: meta_search_adapter.rs  mod.rs  multi_provider_adapter.rs  paper_download_adapter.rs  pdf_metadata_adapter.rs
src/client/: circuit_breaker_service.rs  meta_search.rs  mirror.rs  mod.rs  rate_limiter.rs  sci_hub.rs
src/client/providers/: arxiv.rs  biorxiv.rs  core.rs  crossref.rs  mdpi.rs  mod.rs  openalex.rs  openreview.rs  pubmed_central.rs  researchgate.rs  sci_hub.rs  semantic_scholar.rs  ssrn.rs  traits.rs  unpaywall.rs
src/config/: mod.rs
src/di/: example.rs  mod.rs
src/ports/: download_service.rs  metadata_service.rs  mod.rs  provider_service.rs  search_service.rs
src/repositories/: cache.rs  config.rs  mod.rs  paper.rs
src/resilience/: circuit_breaker.rs  health.rs  integration_tests.rs  mod.rs  retry.rs  timeout.rs
src/server/: handler.rs  mod.rs  transport.rs
src/service/: daemon.rs  health.rs  mod.rs  pid.rs  signals.rs
src/services/: categorization.rs  mod.rs
src/tools/: bibliography.rs  categorize.rs  code_search.rs  command.rs  command_examples.rs  download.rs  metadata.rs  mod.rs  search.rs
tests/: README.md  categorization_integration_test.rs  categorization_test.rs  compatibility_tests.rs  comprehensive_e2e_scenarios.rs  docs_test.rs  download_cascade_test.rs  e2e_download_flow_test.rs  e2e_install_test.sh  e2e_mcp_test.rs  e2e_mcp_working.rs  e2e_simple.rs  e2e_test_suite.rs  end_to_end_test.rs  homebrew_test.sh  installation_integration_test.sh  integration_test.rs  launchagent_test.sh  property_tests.rs  providers_e2e_test.rs  security_tests.rs  server_integration_test.rs  service_integration_test.rs  test_mcp_e2e.py
